--- a/.github/workflows/ossar.yml
+++ b/.github/workflows/ossar.yml
@@ -10,10 +10,10 @@ name: OSSAR
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "pk-temp-ossar" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "master" ]
+    branches: [ "master", "pk-temp-ossar" ]
   schedule:
     - cron: '27 3 * * 5'
 
